Phase 1 cleanup: Organize project structure (zero impact)
- Enhanced .gitignore with comprehensive rules for logs, cache, OS files
- Created /scripts/ folder and moved all utility scripts
- Created /logs/ folder and moved all log files
- Moved backend/CURRENT_STATUS.md to docs/backend/BACKEND_STATUS.md
- Added scripts/README.md with usage instructions
- Root directory now clean with only essential folders

Changes are non-breaking - no code or import paths modified.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,38 @@
+# Virtual environments
 venv/
 backend/venv/
+
+# Python cache
 __pycache__/
 *.pyc
-*.log
-.DS_Store
+*.pyo
+*.pyd
+.Python
+
+# Environment files
 .env
 .env.local
+
+# Log files
+*.log
+logs/
+backend/logs/
+frontend.log
+muselsl.log
+start_log.txt
+
+# OS files
+.DS_Store
+**/.DS_Store
+
+# Node modules
 node_modules/
+
+# Build outputs
+dist/
+build/
+*.egg-info/
+
+# IDE
+.vscode/
+.idea/
